--- a/backend/.env
+++ b/backend/.env
@@ -4,11 +4,6 @@ JWT_SECRET=SECRET_KEY
 POSTGRES_PASSWORD=student
 POSTGRES_DB=nest_project
 POSTGRES_USER=student
-POSTGRES_HOST=localhost
-POSTGRES_PGDATA
-
-DEPLOY_USER="smthofvalue"
-DEPLOY_HOST="ibragimovr.students.nomoredomains.work"
-DEPLOY_REF="origin/main"
-DEPLOY_REPO="git@github.com:SmthOfValue/web-plus-pm2-deploy.git"
-DEPLOY_PATH="/home/smthofvalue/"
+POSTGRES_HOST=database
+POSTGRES_PORT=5432
+PGDATA=/var/lib/postgresql/data/pgdata
