--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,7 +13,7 @@ FROM node:16-alpine
 WORKDIR /app
 COPY package*.json .
 RUN npm ci --omit=dev --no-audit --no-fund && npm i -g pm2
-COPY --from=builder /app/dist ./dist
-COPY ./ecosystem.config.js .
+COPY --from=builder /app/dist ./dist/
+COPY ./ecosystem.config.js ./
 EXPOSE 4000
 CMD ["pm2-runtime", "start", "ecosystem.config.js"]
