corrected docker-compose copy

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:16-alpine AS builder
 WORKDIR /app
-COPY package*.json .
+COPY package*.json ./
 RUN npm ci
-COPY . .
+COPY . ./
 RUN npm run build \
     && rm -rf ./src \
     && rm -f ./.eslintrc.js \
@@ -11,7 +11,7 @@ RUN npm run build \
 
 FROM node:16-alpine
 WORKDIR /app
-COPY package*.json .
+COPY package*.json ./
 RUN npm ci --omit=dev --no-audit --no-fund && npm i -g pm2
 COPY --from=builder /app/dist ./dist/
 COPY ./ecosystem.config.js ./
