changed frontend dockerfile

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,7 @@ RUN npm run build \
     && rm -rf ./src \
     && rm -rf ./node_modules
 
-FROM nginx:latest AS frontend
+FROM nginx:latest
 COPY --from=builder /app/build /usr/share/nginx/html
 COPY nginx/conf.d/default.conf /etc/nginx/conf.d/
 EXPOSE 8081
